# pipeline_dsl

./: .gitignore  LICENSE  README.md  TUTORIAL.md  ast_nodes.py  build_exe.ps1  data.ppl  executor.py  file_reader.py  main.py  ppl_parser.py  pyproject.toml  setup.ps1
data/: contractors.csv  departments.csv  employees.csv  people.csv
pipelines/: advanced.ppl  aggregations.ppl  error_handling.ppl  example.ppl  string_and_type_ops.ppl  timing.ppl  variables.ppl
tests/: conftest.py  test_commands.py  test_features.py  test_parser.py
tutorials/: 01_hello_pipeline.ppl  02_inspecting_data.ppl  03_filtering.ppl  04_selecting_columns.ppl  05_transforming.ppl  06_aggregation.ppl  07_fill_and_assert.ppl  08_saving_output.ppl  09_capstone.ppl  10_timestamps.ppl
vscode-ppl/: LICENSE  README.md  extension.js  language-configuration.json  package.json
vscode-ppl/snippets/: ppl.json
vscode-ppl/syntaxes/: ppl.tmLanguage.json
